src/main/java/com/example/sanctionedpeopleservice/common/error/response/ErrorDetail.java
package com.example.sanctionedpeopleservice.common.error.response;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

@Getter
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class ErrorDetail {
  private String message;
}
